--- a/index.html
+++ b/index.html
@@ -15,17 +15,27 @@
 <body>
 
   <main>
-    <h1>Equilibrium #3429</h1>
-    <p>Our Equilibrium collection promotes balance and calm.</p>
-    0.041 ETH
-    3 days left
-    
-    Creation of Jules Wyvern
-  </main>
-
+  <section id="tudo">
+    <div><img id="equilibrium" src="images/image-equilibrium.jpg" alt="imagem principal"></div>
+      <section class="principal">
+        <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </section>
+      <section class="article">
+        <article id="eth"> <i><img src="images/icon-ethereum.svg" alt="icone eth"></i> 0.041 ETH</article> <article id="days"><i><img src="images/icon-clock.svg" alt="icon clock"></i>3 days left</article>
+      </section>
+    <hr color="">
+      <section id="final">
+        <picture> <img id="avatar" src="images/image-avatar.png" alt="icon Jules"></picture> <article id="jules">Creation of <article id="nome">Jules Wyvern</article></article>
+      </section>
+      
+  </section>
+  <br>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Bruno091py" target="_blank">Bruno A.Q.Guimarães</a>.
   </div>
+  </main>
+  
 </body>
 </html>
